--- a/app/src/main/res/layout/fragment_restore.xml
+++ b/app/src/main/res/layout/fragment_restore.xml
@@ -2,7 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_height="match_parent"
+             android:paddingBottom="@dimen/activity_vertical_margin"
+             android:paddingLeft="@dimen/activity_horizontal_margin"
+             android:paddingRight="@dimen/activity_horizontal_margin"
+             android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout android:id="@+id/restore_layout"
                   xmlns:android="http://schemas.android.com/apk/res/android"
@@ -29,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
             android:text="@string/restore_password"
             android:textColor="@android:color/white"
             custom:pb_colorNormal="@color/normal"
