--- a/app/src/main/res/layout/fragment_tab_info.xml
+++ b/app/src/main/res/layout/fragment_tab_info.xml
@@ -2,7 +2,11 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,6 +14,7 @@
         android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
+            android:layout_marginTop="8dp"
             android:id="@+id/name_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -17,8 +22,8 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true"
                 android:hint="@string/registration_name"
+                android:singleLine="true"
             />
 
         </android.support.design.widget.TextInputLayout>
@@ -26,25 +31,29 @@
         <android.support.design.widget.TextInputLayout
             android:id="@+id/surname_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:hint="@string/registration_surname"/>
+                android:hint="@string/registration_surname"
+                android:singleLine="true"/>
 
         </android.support.design.widget.TextInputLayout>
 
         <Spinner
             android:id="@+id/sex"
+            android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/date_birth_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp">
 
             <EditText
                 android:id="@+id/date_birth"
