--- a/app/src/main/res/layout/fragment_tab_login.xml
+++ b/app/src/main/res/layout/fragment_tab_login.xml
@@ -2,7 +2,11 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:id="@+id/contact_layout"
@@ -18,12 +22,13 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:hint="@string/registration_login"/>
+                android:hint="@string/registration_login"
+                android:singleLine="true"/>
 
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
+            android:layout_marginTop="8dp"
             android:id="@+id/password_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -32,12 +37,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/registration_password"
-                android:singleLine="true"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:singleLine="true"/>
 
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
+            android:layout_marginTop="8dp"
             android:id="@+id/confirm_password_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -46,12 +52,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/registration_confirm_password"
-                android:singleLine="true"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:singleLine="true"/>
 
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
+            android:layout_marginTop="8dp"
             android:id="@+id/mail_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -59,8 +66,8 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:hint="@string/registration_email"/>
+                android:hint="@string/registration_email"
+                android:singleLine="true"/>
 
         </android.support.design.widget.TextInputLayout>
 
