--- a/app/src/main/res/layout/item_post_profile.xml
+++ b/app/src/main/res/layout/item_post_profile.xml
@@ -6,9 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    card_view:cardCornerRadius="@dimen/post_card_radius"
-    card_view:cardElevation="@dimen/post_card_elevation"
-    card_view:cardMaxElevation="@dimen/post_card_elevation"
+    card_view:cardCornerRadius="2dp"
+    card_view:cardElevation="2dp"
+    card_view:cardMaxElevation="2dp"
     card_view:cardUseCompatPadding="true">
 
     <LinearLayout android:layout_width="match_parent"
